--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Back-End developer</h3>
           <p class="fst-italic">
-            I am a self taught coder and web designer.
+            I am a self taught Java Spring Boot developer and web designer.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -88,7 +88,7 @@
             </div>
           </div>
           <p>
-            Looking to hire a skilled coder and analyst for your company? You've come to the right place! I have extensive experience in coding and analysis, and I'm ready to contribute to your projects. Additionally, if you require freelance services, I'm available to work on your projects. You can find my contact details in the Contact menu. Don't hesitate to reach out and let's discuss how I can bring value to your team!
+            Looking to hire a skilled Java Spring Boot developer and analyst for your company? You've come to the right place! I have extensive experience in coding and analysis, and I'm ready to contribute to your projects. Additionally, if you require freelance services, I'm available to work on your projects. You can find my contact details in the Contact menu. Don't hesitate to reach out and let's discuss how I can bring value to your team!
           </p>
         </div>
       </div>
@@ -104,7 +104,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Projects</p>
           </div>
@@ -113,20 +113,20 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="1500" data-purecounter-duration="100"
               class="purecounter"></span>
             <p>Hours Of Coding</p>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+        <!-- <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-award"></i>
             <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Awards</p>
           </div>
-        </div>
+        </div> -->
 
     </div><!-- End Counts -->
   </section><!-- End About Section -->
@@ -264,12 +264,60 @@
         <p>My Works</p>
       </div>
 
+        <!-- ======= First row ======= -->
+        <div class="row portfolio-container">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/Memegram.png" class="img-fluid w-100" alt="">
+              <div class="portfolio-info">
+                <h4>Project 1</h4>
+                <p>Memegram : Social Media Web App</p>
+                <div class="portfolio-links">
+                  <a href="https://trendythreads.cloud/login" target="_blank" class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/TrendyThreads.png" class="img-fluid w-100" alt="">
+              <div class="portfolio-info">
+                <h4>Project 2</h4>
+                <p>Trendy Threads: E-Commerce Web App</p>
+                <div class="portfolio-links">
+  
+                  <a href="https://athulraj.shop/user/" title="TrendyThreads"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+  
+  
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/Screenshot (49).png" target="_blank"
+                class="img-fluid w-100" alt="">
+              <div class="portfolio-info">
+                <h4>Project 3</h4>
+                <p>URL Ninja : URL Shortener</p>
+                <div class="portfolio-links">
+                  <a href="https://github.com/Athul030/UrlShortnerSpringBoot" target="_blank" class="bx bx-link"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+      
+      <!-- ======= Second row ======= -->
+
       <div class="row portfolio-container">
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/Screenshot (47).png" class="img-fluid w-100" alt="">
             <div class="portfolio-info">
-              <h4>Project 1</h4>
+              <h4>Project 4</h4>
               <p>Static Sprite Homepage</p>
               <div class="portfolio-links">
                 <a href="https://athul030.github.io/" target="_blank" class="bx bx-link"></i></a>
@@ -283,11 +331,11 @@
             <img src="assets/img/Screenshot (48).png"
               class="img-fluid w-100" alt="">
             <div class="portfolio-info">
-              <h4>Project 2</h4>
-              <p>BSA Homepage</p>
+              <h4>Project 5</h4>
+              <p>Starbucks Homepage</p>
               <div class="portfolio-links">
 
-                <a href="https://athul030.github.io/secondhtml/" title="Portfolio Details"><i
+                <a href="https://athul030.github.io/anotherhtml/" title="Portfolio Details"><i
                     class="bx bx-link"></i></a>
               </div>
             </div>
@@ -301,10 +349,10 @@
             <img src="assets/img/Screenshot (49).png" target="_blank"
               class="img-fluid w-100" alt="">
             <div class="portfolio-info">
-              <h4>Project 3</h4>
+              <h4>Project 6</h4>
               <p>Responsive Rockstar Games Homepage</p>
               <div class="portfolio-links">
-                <a href="https://athul030.github.io/rockstar/" target="_blank" class="bx bx-link"></a>
+                <a href="https://athul030.github.io/Rockstar/" target="_blank" class="bx bx-link"></a>
               </div>
             </div>
           </div>
