--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/athul-raj-52551139/" target="_blank" class="linkedin"><i
             class="bi bi-linkedin"></i></a>
+        <a href="https://leetcode.com/u/Athul3/" target="_blank" class="leetcode"><i
+              class="bi bi-code"></i></a>
       </div>
 
     </div>
@@ -88,7 +90,7 @@
             </div>
           </div>
           <p>
-            Looking to hire a skilled Java Spring Boot developer and analyst for your company? You've come to the right place! I have extensive experience in coding and analysis, and I'm ready to contribute to your projects. Additionally, if you require freelance services, I'm available to work on your projects. You can find my contact details in the Contact menu. Don't hesitate to reach out and let's discuss how I can bring value to your team!
+            Looking to hire a skilled Java Spring Boot developer with proficiency in Angular for your company? You've come to the right place! I have extensive experience in coding and analysis, and I'm ready to contribute to your projects. Additionally, if you require freelance services, I'm available to work on your projects. You can find my contact details in the Contact menu. Don't hesitate to reach out and let's discuss how I can bring value to your team!
           </p>
         </div>
       </div>
@@ -145,7 +147,7 @@
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h3 class="fw-bold">Athul Raj</h3>
-            <p><em>Unleashing the full potential of Java's backend prowess, a masterful Spring Boot developer orchestrates the symphony of server-side logic, crafting dynamic web applications with finesse.</em></p>
+            <p><em>Unleashing the full potential of Java's backend prowess, a masterful Spring Boot developer orchestrates the symphony of server-side logic, crafting dynamic web applications with the help of Angular framework.</em></p>
             <p>
             <ul>
               <li>Ernakulam, Kerala, India</li>
@@ -298,7 +300,7 @@
   
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/Screenshot (49).png" target="_blank"
+              <img src="assets/img/URL Ninja.png" target="_blank"
                 class="img-fluid w-100" alt="">
               <div class="portfolio-info">
                 <h4>Project 3</h4>
